Upgrade to Java 16 idioms